--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ tests/**/.tkenvrc
 tests/**/out.tmp
 tests/**/err.tmp
 
+examples/**/analysis
 examples/**/results
 examples/**/.tkenvrc
 examples/**/valgrind.out
