re-track the configuration file and updated

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -50,6 +50,7 @@ print-undisposed = false
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
+*.manager.useDrivingSimulator = true
 
 ##########################################################
 #            11p specific parameters                     #
@@ -82,7 +83,7 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "SimplePlatooningApp"
+*.node[*].appl_type = "PlatoonMergingApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -107,10 +108,18 @@ sim-time-limit = 460s
 
 *.node[*].appl.leaderSpeed = 100kmph
 
+*.node[*].appl.DScontrol = true
+**.dummyDScontrol = ${vticontrol=true} #just for logging
+
+*.node[*].appl.SUMOdisturb = false
+
+
+
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
@@ -121,7 +130,7 @@ sim-time-limit = 1e6s
 
 #use ACC or CACC
 **.dummycontroller=${controller=0,0,1,2}
-*.node[*].appl.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG" ! controller}
+*.node[*].appl.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "EMPTY" ! controller}
 #ACC time headway. note that time headway for CACC and PLOEG is ignored
 **.dummyheadway=${headway=0.3,1.2,0.3,0.0!controller}s
 *.node[*].appl.accHeadway = ${headway}s
@@ -132,7 +141,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=200}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=120s
+*.node[*].prot.communicationDuration=180s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
@@ -142,12 +151,16 @@ sim-time-limit = 1e6s
 *.node[*].appl.caccXi = 1
 *.node[*].appl.caccOmegaN = 0.2Hz
 *.node[*].appl.engineTau = 0.5s
-*.node[*].appl.ploegH = 0.5s
+*.node[*].appl.ploegH = 1.0s
 *.node[*].appl.ploegKp = 0.2
 *.node[*].appl.ploegKd = 0.7
+*.node[*].appl.dsVehicle = "platoon0.2"
+
+*.node[*].appl.CACCSpacing = 16.00
+*.node[*].appl.safeGap = 16.00
 
 #make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
 *.node[*].appl.leaderOscillationFrequency = 0.2Hz
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.sca
