added Kp for gap-making controller as a configuration file parameter

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -141,7 +141,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=200}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=180s
+*.node[*].prot.communicationDuration=200s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
@@ -156,8 +156,9 @@ sim-time-limit = 1e6s
 *.node[*].appl.ploegKd = 0.7
 *.node[*].appl.dsVehicle = "platoon0.2"
 
-*.node[*].appl.CACCSpacing = 16.00
-*.node[*].appl.safeGap = 16.00
+*.node[*].appl.CACCSpacing = 11.00
+*.node[*].appl.safeGap = 11.00
+*.node[*].appl.gapKp = 1.0
 
 #make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
 *.node[*].appl.leaderOscillationFrequency = 0.2Hz
