added platoon dis-aggregation app

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -50,7 +50,7 @@ print-undisposed = false
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
-*.manager.useDrivingSimulator = true
+*.manager.useDrivingSimulator = false
 
 ##########################################################
 #            11p specific parameters                     #
@@ -83,7 +83,9 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "PlatoonMergingApp"
+#*.node[*].appl_type = "PlatoonMergingApp"
+*.node[*].appl_type = "PlatoonDisaggregationApp"
+#*.node[*].appl_type = "SimplePlatooningApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -118,8 +120,8 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
-*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
@@ -158,7 +160,7 @@ sim-time-limit = 1e6s
 
 *.node[*].appl.CACCSpacing = 11.00
 *.node[*].appl.safeGap = 20.00
-*.node[*].appl.gapKp = 1.0
+*.node[*].appl.gapKp = 2.0
 
 #make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
 *.node[*].appl.leaderOscillationFrequency = 0.2Hz
