added example for PlatoonDisaggregationApp

--- a/examples/platoonDisaggregation/omnetpp.ini
+++ b/examples/platoonDisaggregation/omnetpp.ini
@@ -83,8 +83,8 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "PlatoonMergingApp"
-#*.node[*].appl_type = "PlatoonDisaggregationApp"
+#*.node[*].appl_type = "PlatoonMergingApp"
+*.node[*].appl_type = "PlatoonDisaggregationApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
 
 **.scalar-recording = false
@@ -110,8 +110,8 @@ sim-time-limit = 460s
 
 *.node[*].appl.leaderSpeed = 100kmph
 
-*.node[*].appl.DScontrol = true
-**.dummyDScontrol = ${vticontrol=true} #just for logging
+*.node[*].appl.DScontrol = false
+**.dummyDScontrol = ${vticontrol=false} #just for logging
 
 *.node[*].appl.SUMOdisturb = false
 
@@ -120,8 +120,8 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
-*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
