branch for nikita

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -50,7 +50,7 @@ print-undisposed = false
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
-*.manager.useDrivingSimulator = false
+*.manager.useDrivingSimulator = true
 
 ##########################################################
 #            11p specific parameters                     #
