--- a/examples/platoonDisaggregation/omnetpp.ini
+++ b/examples/platoonDisaggregation/omnetpp.ini
@@ -83,9 +83,7 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-#*.node[*].appl_type = "PlatoonMergingApp"
 *.node[*].appl_type = "PlatoonDisaggregationApp"
-#*.node[*].appl_type = "SimplePlatooningApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -131,10 +129,10 @@ repeat=1
 sim-time-limit = 1e6s
 
 #use ACC or CACC
-**.dummycontroller=${controller=0,0,1,2}
-*.node[*].appl.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "EMPTY" ! controller}
+**.dummycontroller=${controller=0,0,1,2,2}
+*.node[*].appl.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "QICHEN", "EMPTY" ! controller}
 #ACC time headway. note that time headway for CACC and PLOEG is ignored
-**.dummyheadway=${headway=0.3,1.2,0.3,0.0!controller}s
+**.dummyheadway=${headway=0.3,1.2,0.3,0.0,0.0!controller}s
 *.node[*].appl.accHeadway = ${headway}s
 
 #access category for platooning beacons
@@ -161,6 +159,10 @@ sim-time-limit = 1e6s
 *.node[*].appl.CACCSpacing = 11.00
 *.node[*].appl.safeGap = 20.00
 *.node[*].appl.gapKp = 2.0
+
+*.node[*].appl.qichen_Kv = 0.4
+*.node[*].appl.qichen_Kr = 0.01
+*.node[*].appl.qichen_Rdes = 10
 
 #make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
 *.node[*].appl.leaderOscillationFrequency = 0.2Hz
