manual driving with only sending speed from driving simulator is now working

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -83,9 +83,10 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "PlatoonMergingApp"
-#*.node[*].appl_type = "PlatoonDisaggregationApp"
+#*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
+#*.node[*].appl_type = "PlatoonDisaggregationApp"
+*.node[*].appl_type = "ManualDrivingApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -120,8 +121,8 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
-*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
