--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -83,9 +83,9 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "PlatoonMergingApp"
+#*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "PlatoonDisaggregationApp"
-#*.node[*].appl_type = "SimplePlatooningApp"
+*.node[*].appl_type = "SimplePlatooningApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -110,7 +110,7 @@ sim-time-limit = 460s
 
 *.node[*].appl.leaderSpeed = 100kmph
 
-*.node[*].appl.DScontrol = true
+*.node[*].appl.DScontrol = false
 **.dummyDScontrol = ${vticontrol=true} #just for logging
 
 *.node[*].appl.SUMOdisturb = false
@@ -143,7 +143,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=200}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=200s
+*.node[*].prot.communicationDuration=120s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
@@ -153,7 +153,7 @@ sim-time-limit = 1e6s
 *.node[*].appl.caccXi = 1
 *.node[*].appl.caccOmegaN = 0.2Hz
 *.node[*].appl.engineTau = 0.5s
-*.node[*].appl.ploegH = 0.54s
+*.node[*].appl.ploegH = 0.3s
 *.node[*].appl.ploegKp = 0.2
 *.node[*].appl.ploegKd = 0.7
 *.node[*].appl.dsVehicle = "platoon0.2"
