--- a/examples/platoonDisaggregation/omnetpp.ini
+++ b/examples/platoonDisaggregation/omnetpp.ini
@@ -50,7 +50,7 @@ print-undisposed = false
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
-*.manager.useDrivingSimulator = true
+*.manager.useDrivingSimulator = false
 
 ##########################################################
 #            11p specific parameters                     #
@@ -118,8 +118,9 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
 #*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"PlatoonDisaggregationProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
@@ -141,7 +142,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=2000}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=250s
+*.node[*].prot.communicationDuration=200s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
