--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -51,7 +51,7 @@ print-undisposed = false
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "192.168.164.10"
+*.manager.IPDS = "194.47.15.47"
 
 ##########################################################
 #            11p specific parameters                     #
@@ -84,10 +84,10 @@ print-undisposed = false
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
 
-*.node[*].appl_type = "PlatoonMergingApp"
+#*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
 #*.node[*].appl_type = "PlatoonDisaggregationApp"
-#*.node[*].appl_type = "ManualDrivingApp"
+*.node[*].appl_type = "ManualDrivingApp"
 
 **.scalar-recording = false
 **.vector-recording = true
@@ -112,7 +112,7 @@ sim-time-limit = 460s
 
 *.node[*].appl.leaderSpeed = 100kmph
 
-*.node[*].appl.DScontrol = false
+*.node[*].appl.DScontrol = true
 **.dummyDScontrol = ${vticontrol=true} #just for logging
 
 *.node[*].appl.SUMOdisturb = false
@@ -122,8 +122,8 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
-*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
