now ip_address in ManualDrivingApp is also a variable in config file

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -51,7 +51,7 @@ print-undisposed = false
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "194.47.15.47"
+*.manager.IPDS = "194.47.15.19"
 
 ##########################################################
 #            11p specific parameters                     #
@@ -83,6 +83,7 @@ print-undisposed = false
 *.node[*].mobility.x = 0
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
+*.node[*].appl.IP_DS = "194.47.15.19"
 
 #*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
@@ -145,7 +146,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=200}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=200s
+*.node[*].prot.communicationDuration=60s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
