--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -51,7 +51,7 @@ print-undisposed = false
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "194.47.15.19"
+*.manager.IPDS = "194.47.15.53"
 
 ##########################################################
 #            11p specific parameters                     #
@@ -83,7 +83,7 @@ print-undisposed = false
 *.node[*].mobility.x = 0
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.53"
 
 #*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
@@ -111,7 +111,7 @@ sim-time-limit = 460s
 
 *.manager.launchConfig = xmldoc("sumocfg/freeway.launchd.xml")
 
-*.node[*].appl.leaderSpeed = 60kmph
+*.node[*].appl.leaderSpeed = 100kmph
 
 *.node[*].appl.DScontrol = true
 **.dummyDScontrol = ${vticontrol=true} #just for logging
@@ -123,8 +123,9 @@ sim-time-limit = 460s
 #use a dummy variable for choosing the protocol (static beaconing or slotted beaconing)
 #so that a number can be put into the file name instead of a string
 dummy.protocol = ${protocol = 1}
-*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
+#*.node[*].protocol_type = ${"SimplePlatooningBeaconing", ! protocol}
 #*.node[*].protocol_type = ${"PlatoonMergingProtocol", ! protocol}
+*.node[*].protocol_type = ${"ManualDrivingProtocol", ! protocol}
 
 [Config Sinusoidal]
 extends = SinPlatoon
@@ -146,7 +147,7 @@ sim-time-limit = 1e6s
 *.node[*].prot.packetSize=${packetSize=200}
 
 #collect data for some minutes. This is just for example, might be changed
-*.node[*].prot.communicationDuration=90s
+*.node[*].prot.communicationDuration=120s
 
 #via wireless send acceleration computed by the controller, not the actual one
 *.node[*].appl.useControllerAcceleration = true
@@ -156,12 +157,12 @@ sim-time-limit = 1e6s
 *.node[*].appl.caccXi = 1
 *.node[*].appl.caccOmegaN = 0.2Hz
 *.node[*].appl.engineTau = 0.5s
-*.node[*].appl.ploegH = 0.54s
+*.node[*].appl.ploegH = 2s
 *.node[*].appl.ploegKp = 0.2
 *.node[*].appl.ploegKd = 0.7
 *.node[*].appl.dsVehicle = "platoon0.2"
 
-*.node[*].appl.CACCSpacing = 40.00
+*.node[*].appl.CACCSpacing = 25.00
 *.node[*].appl.safeGap = 20.00
 *.node[*].appl.gapKp = 2.0
 
