now have readable name for log files

--- a/examples/sinPlatoon/omnetpp.ini
+++ b/examples/sinPlatoon/omnetpp.ini
@@ -51,7 +51,7 @@ print-undisposed = false
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "192.168.0.1"
+*.manager.IPDS = "194.47.15.19"
 
 ##########################################################
 #            11p specific parameters                     #
@@ -83,7 +83,7 @@ print-undisposed = false
 *.node[*].mobility.x = 0
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 1.895
-*.node[*].appl.IP_DS = "192.168.0.1"
+*.node[*].appl.IP_DS = "194.47.15.19"
 
 #*.node[*].appl_type = "PlatoonMergingApp"
 #*.node[*].appl_type = "SimplePlatooningApp"
@@ -157,17 +157,20 @@ sim-time-limit = 1e6s
 *.node[*].appl.caccXi = 1
 *.node[*].appl.caccOmegaN = 0.2Hz
 *.node[*].appl.engineTau = 0.5s
-*.node[*].appl.ploegH = 1.1s
+*.node[*].appl.ploegH = ${PloegHeadway=1.1}s
 *.node[*].appl.ploegKp = 0.2
 *.node[*].appl.ploegKd = 0.7
 *.node[*].appl.dsVehicle = "platoon0.2"
 
-*.node[*].appl.CACCSpacing = 17.5
+*.node[*].appl.CACCSpacing = ${CACCgap=17.5}
 *.node[*].appl.safeGap = 20.00
 *.node[*].appl.gapKp = 2.0
 
 #make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
 *.node[*].appl.leaderOscillationFrequency = 0.2Hz
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.sca
+output-vector-file = ${resultdir}/${datetime}_${controller}_${CACCgap}_${PloegHeadway}_${vticontrol}.vec
+output-scalar-file = ${resultdir}/${datetime}_${controller}_${CACCgap}_${PloegHeadway}_${vticontrol}.sca
+
+#output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.vec
+#output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}_${vticontrol}.sca
