now can visualize platoon from plexe2.0 in driving simulator, start working on having two platoons with different sizes

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ src/*.so
 src/**/*_m.h
 src/**/*_m.cc
 
+*.anf
+.metadata/*
+
 examples/**/analysis/Makefile
 examples/**/analysis/*.pdf
-#test ssh
 
 doc/doxy
 doc/neddoc
