--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -102,8 +102,8 @@ seed-set = ${repetition}
 ##########################################################
 
 **.numberOfCars = ${nCars = 8}
-**.numberOfCarsPerPlatoon = ${platoonSize = 8}
-**.numberOfLanes = ${nLanes = 1}
+**.numberOfCarsPerPlatoon = ${platoonSize = 4}
+**.numberOfLanes = ${nLanes = 2}
 
 ##########################################################
 #                    Position helper                     #
@@ -122,11 +122,13 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
+*.node[*].scenario.caccSpacing = ${CACCgap=10}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 0.5}s
+*.node[*].scenario.ploegH = ${ploegH = 2}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
+
 
 #controllers to be tested
 **.numericController = ${controller = 0, 0, 1, 2, 3}
@@ -144,7 +146,9 @@ seed-set = ${repetition}
 #                      Application                       #
 ##########################################################
 
-*.node[*].appl_type = "SimplePlatooningApp"
+#try to move application to the configuration section below
+#*.node[*].appl_type = "SimplePlatooningApp"
+
 #enable statistics recording for the application
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
@@ -174,7 +178,7 @@ seed-set = ${repetition}
 #                    Traffic manager                     #
 ##########################################################
 
-**.traffic_type = "PlatoonsTrafficManager"
+**.traffic_type = "PlatoonsAdvancedTrafficManager"
 #insert platooning vehicles at time
 **.traffic.platoonInsertTime = 1 s
 #insert platooning vehicles with a speed of
@@ -192,12 +196,19 @@ seed-set = ${repetition}
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
+##########################################################
+#                    Driving Simulator                   #
+##########################################################
+*.manager.useDrivingSimulator = true
+*.manager.IPDS = "194.47.15.48"
+#*.node[*].appl.IP_DS = "194.47.15.19"
 
 #disable statistics recording for all other modules
 **.scalar-recording = false
 **.vector-recording = false
 
 [Config Sinusoidal]
+*.node[*].appl_type = "SimplePlatooningApp"
 
 repeat = 1
 
@@ -213,6 +224,7 @@ output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repet
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
 [Config Braking]
+*.node[*].appl_type = "SimplePlatooningApp"
 
 repeat = 1
 
