--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -101,8 +101,8 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 8}
-**.numberOfCarsPerPlatoon = ${platoonSize = 4}
+**.numberOfCars = ${nCars = 9}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 2}
 
 ##########################################################
@@ -122,9 +122,9 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=10}
+*.node[*].scenario.caccSpacing = ${CACCgap=5}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 2}s
+*.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
@@ -190,7 +190,7 @@ seed-set = ${repetition}
 #use nLanes lanes
 **.traffic.nLanes = ${nLanes}
 #SUMO vtype for platooning vehicles
-**.traffic.platooningVType = "vtypeauto"
+**.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
 **.traffic.platoonInsertDistance = ${2, 2, 5, 2, 15 ! controller}m
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
