--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -122,7 +122,7 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=5}
+*.node[*].scenario.caccSpacing = ${CACCgap=10}
 *.node[*].scenario.engineTau = 0.5 s
 *.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
@@ -153,13 +153,14 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 200 s
 
 ##########################################################
 #                Communication protocols                 #
 ##########################################################
 
-*.node[*].protocol_type = "SimplePlatooningBeaconing"
+#*.node[*].protocol_type = "SimplePlatooningBeaconing"
+*.node[*].protocol_type = "PlatoonMergingProtocol"
 #enable statistics recording for the network layer
 *.node[*].prot.*.scalar-recording = true
 *.node[*].prot.*.vector-recording = true
@@ -192,7 +193,7 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, 5, 2, 15 ! controller}m
+**.traffic.platoonInsertDistance = ${2, 2, 10, 2, 15 ! controller}m
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
@@ -201,7 +202,7 @@ seed-set = ${repetition}
 ##########################################################
 *.manager.useDrivingSimulator = true
 *.manager.IPDS = "194.47.15.48"
-#*.node[*].appl.IP_DS = "194.47.15.19"
+#*.node[*].appl.IP_DS = "194.47.15.48"
 
 #disable statistics recording for all other modules
 **.scalar-recording = false
@@ -238,6 +239,21 @@ repeat = 1
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+[Config PlatoonMerging]
+*.node[*].appl_type = "PlatoonMergingApp"
+
+repeat = 1
+
+#use the sinusoidal scenario
+*.node[*].scenario_type = "PlatoonMergingScenario"
+
+*.node[*].appl.caccSpacing = ${CACCgap}
+*.node[*].appl.ploegH = ${ploegH}
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
 
 [Config SinusoidalNoGui]
 extends = Sinusoidal
