platoon merging scenario is now working

--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -250,6 +250,8 @@ repeat = 1
 
 *.node[*].appl.caccSpacing = ${CACCgap}
 *.node[*].appl.ploegH = ${ploegH}
+*.node[*].appl.gapKp = 2
+*.node[*].appl.safeGap = 20
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
