ManualDrivingApp on Veins side should be working, more work needs to be done in SUMO

--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -101,9 +101,10 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 9}
-**.numberOfCarsPerPlatoon = ${platoonSize = 5}
-**.numberOfLanes = ${nLanes = 2}
+**.numberOfCars = ${nCars = 4}
+**.numberOfCarsPerPlatoon = ${platoonSize = 4}
+**.numberOfLanes = ${nLanes = 1}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 ##########################################################
 #                    Position helper                     #
@@ -146,8 +147,7 @@ seed-set = ${repetition}
 #                      Application                       #
 ##########################################################
 
-#try to move application to the configuration section below
-#*.node[*].appl_type = "SimplePlatooningApp"
+#Select the application to use below under each configuration
 
 #enable statistics recording for the application
 *.node[*].appl.*.scalar-recording = true
@@ -161,6 +161,7 @@ seed-set = ${repetition}
 
 #*.node[*].protocol_type = "SimplePlatooningBeaconing"
 *.node[*].protocol_type = "PlatoonMergingProtocol"
+
 #enable statistics recording for the network layer
 *.node[*].prot.*.scalar-recording = true
 *.node[*].prot.*.vector-recording = true
@@ -197,16 +198,20 @@ seed-set = ${repetition}
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
+**.traffic.nManualCars = ${nCarsManual}
+**.traffic.laneManualCars = 2
+
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = true
 *.manager.IPDS = "194.47.15.19"
-#*.node[*].appl.IP_DS = "194.47.15.19"
 
 #disable statistics recording for all other modules
 **.scalar-recording = false
 **.vector-recording = false
+
+##########################################################
 
 [Config Sinusoidal]
 *.node[*].appl_type = "SimplePlatooningApp"
@@ -224,6 +229,7 @@ repeat = 1
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
+##########################################################
 [Config Braking]
 *.node[*].appl_type = "SimplePlatooningApp"
 
@@ -240,12 +246,12 @@ repeat = 1
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
+##########################################################
 [Config PlatoonMerging]
 *.node[*].appl_type = "PlatoonMergingApp"
 
 repeat = 1
 
-#use the sinusoidal scenario
 *.node[*].scenario_type = "PlatoonMergingScenario"
 
 *.node[*].appl.caccSpacing = ${CACCgap}
@@ -256,7 +262,20 @@ repeat = 1
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
+##########################################################
+[Config ManualDriving]
+*.node[*].appl_type = "ManualDrivingApp"
 
+repeat = 1
+
+*.node[*].scenario_type = "ManualDrivingScenario"
+
+*.node[*].appl.IP_DS = "194.47.15.19"
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+##########################################################
 [Config SinusoidalNoGui]
 extends = Sinusoidal
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
@@ -264,6 +283,7 @@ extends = Sinusoidal
 output-vector-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.sca
 
+##########################################################
 [Config BrakingNoGui]
 extends = Braking
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
