--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -204,7 +204,7 @@ seed-set = ${repetition}
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = true
+*.manager.useDrivingSimulator = false
 *.manager.IPDS = "194.47.15.19"
 
 #disable statistics recording for all other modules
