new branch from plexe-dev

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ src/*.so
 src/**/*_m.h
 src/**/*_m.cc
 
+*.anf
+.metadata/*
+*.tkenvlog
+
+examples/**/analysis/Makefile
+examples/**/analysis/*.pdf
+
 doc/doxy
 doc/neddoc
 
