--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -93,7 +93,7 @@ seed-set = ${repetition}
 **.traffic.rng-0 = 5
 
 #launch config. tells Veins which SUMO configuration to run
-*.manager.configFile = "./sumocfg/freeway.sumo.cfg"
+*.manager.configFile = "./sumocfg/offramp.sumo.cfg"
 #launch command. change sumo-gui with sumo depending on what you want to launch
 *.manager.commandLine = "sumo-gui --remote-port $port --seed $seed --configuration-file $configFile"
 
@@ -144,7 +144,7 @@ seed-set = ${repetition}
 #                      Application                       #
 ##########################################################
 
-*.node[*].appl_type = "SimplePlatooningApp"
+
 #enable statistics recording for the application
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
@@ -201,6 +201,8 @@ seed-set = ${repetition}
 
 repeat = 1
 
+*.node[*].appl_type = "SimplePlatooningApp"
+
 #use the sinusoidal scenario
 *.node[*].scenario_type = "SinusoidalScenario"
 
@@ -215,6 +217,8 @@ output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repet
 [Config Braking]
 
 repeat = 1
+
+*.node[*].appl_type = "SimplePlatooningApp"
 
 #use the braking scenario
 *.node[*].scenario_type = "BrakingScenario"
@@ -240,3 +244,14 @@ extends = Braking
 #force the config name in the output file to be the same as for the gui experiment
 output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
+
+[Config OffRamp]
+*.node[*].appl_type = "PlatoonDisaggregationApp"
+
+*.node[*].scenario_type = "SinusoidalScenario"
+
+**.traffic.platoonOffset = 4500 m
+**.traffic.platoonVLength = 4 m
+
+output-vector-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.sca
