added platoon merging config

--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -93,7 +93,7 @@ seed-set = ${repetition}
 **.traffic.rng-0 = 5
 
 #launch config. tells Veins which SUMO configuration to run
-*.manager.configFile = "./sumocfg/offramp.sumo.cfg"
+*.manager.configFile = "./sumocfg/freeway.sumo.cfg"
 #launch command. change sumo-gui with sumo depending on what you want to launch
 *.manager.commandLine = "sumo-gui --remote-port $port --seed $seed --configuration-file $configFile"
 
@@ -101,9 +101,9 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 8}
-**.numberOfCarsPerPlatoon = ${platoonSize = 8}
-**.numberOfLanes = ${nLanes = 1}
+**.numberOfCars = ${nCars = 9}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
+**.numberOfLanes = ${nLanes = 2}
 
 ##########################################################
 #                    Position helper                     #
@@ -123,6 +123,7 @@ seed-set = ${repetition}
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
 *.node[*].scenario.engineTau = 0.5 s
+*.node[*].scenario.caccSpacing = ${CACCgap=10}m
 *.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
@@ -149,13 +150,13 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 200 s
 
 ##########################################################
 #                Communication protocols                 #
 ##########################################################
-
-*.node[*].protocol_type = "SimplePlatooningBeaconing"
+#*.node[*].protocol_type = "SimplePlatooningBeaconing"
+*.node[*].protocol_type = "PlatoonMergingProtocol"
 #enable statistics recording for the network layer
 *.node[*].prot.*.scalar-recording = true
 *.node[*].prot.*.vector-recording = true
@@ -173,8 +174,7 @@ seed-set = ${repetition}
 ##########################################################
 #                    Traffic manager                     #
 ##########################################################
-
-**.traffic_type = "PlatoonsTrafficManager"
+**.traffic_type = "PlatoonsAdvancedTrafficManager"
 #insert platooning vehicles at time
 **.traffic.platoonInsertTime = 1 s
 #insert platooning vehicles with a speed of
@@ -188,8 +188,8 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "vtypeauto"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, 5, 2, 15 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
+**.traffic.platoonInsertDistance = ${2, 2, 10, 2, 15 ! controller}m
+**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, ${ploegH}, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 
@@ -255,3 +255,35 @@ output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}
 
 output-vector-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.sca
+
+[Config PlatoonMerging]
+*.node[*].appl_type = "PlatoonMergingApp"
+
+repeat = 1
+
+*.node[*].scenario_type = "PlatoonMergingScenario"
+
+*.node[*].appl.caccSpacing = ${CACCgap}
+*.node[*].appl.ploegH = ${ploegH}
+*.node[*].appl.gapKp = 2
+*.node[*].appl.safeGap = 20
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+[Config AccelerateAndBraking]
+repeat = 1
+
+*.node[*].appl_type = "SimplePlatooningApp"
+
+#use the braking scenario
+*.node[*].scenario_type = "AccelerateAndBrakeScenario"
+
+#make the leader decelerate with a certain deceleration
+#*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
+*.node[*].scenario.brakingDeceleration = 8 mpsps
+*.node[*].scenario.startBraking = 15 s
+*.node[*].scenario.startAccelerating = 5 s
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
