--- a/examples/offramp/omnetpp.ini
+++ b/examples/offramp/omnetpp.ini
@@ -93,7 +93,7 @@ seed-set = ${repetition}
 **.traffic.rng-0 = 5
 
 #launch config. tells Veins which SUMO configuration to run
-*.manager.configFile = "./sumocfg/freeway.sumo.cfg"
+*.manager.configFile = "./sumocfg/offramp.sumo.cfg"
 #launch command. change sumo-gui with sumo depending on what you want to launch
 *.manager.commandLine = "sumo-gui --remote-port $port --seed $seed --configuration-file $configFile"
 
@@ -101,13 +101,14 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 8}
-**.numberOfCarsPerPlatoon = ${platoonSize = 8}
+**.numberOfCars = ${nCars = 5}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 1}
 
 ##########################################################
 #                    Position helper                     #
 ##########################################################
+
 *.node[*].helper_type = "PositionHelper"
 *.node[*].helper.nLanes = ${nLanes}
 *.node[*].helper.platoonSize = ${platoonSize}
@@ -149,7 +150,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 200 s
+*.node[*].appl.simulationDuration = 60 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -195,67 +196,13 @@ seed-set = ${repetition}
 **.scalar-recording = false
 **.vector-recording = false
 
-[Config Sinusoidal]
+[Config OffRamp]
+*.node[*].appl_type = "PlatoonDisaggregationApp"
 
-repeat = 1
-
-*.node[*].appl_type = "SimplePlatooningApp"
-
-#use the sinusoidal scenario
 *.node[*].scenario_type = "SinusoidalScenario"
 
-#make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
-*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.oscillationAmplitude = 10 kmph
-*.node[*].scenario.startOscillating = 5 s
+**.traffic.platoonOffset = 4500 m
+**.traffic.platoonVLength = 4 m
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
-
-[Config Braking]
-
-repeat = 1
-
-*.node[*].appl_type = "SimplePlatooningApp"
-
-#use the braking scenario
-*.node[*].scenario_type = "BrakingScenario"
-
-#make the leader decelerate with a certain deceleration
-*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.brakingDeceleration = 8 mpsps
-*.node[*].scenario.startBraking = 5 s
-
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
-
-[Config SinusoidalNoGui]
-extends = Sinusoidal
-*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
-#force the config name in the output file to be the same as for the gui experiment
-output-vector-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.sca
-
-[Config BrakingNoGui]
-extends = Braking
-*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
-#force the config name in the output file to be the same as for the gui experiment
-output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
-
-[Config AccelerateAndBraking]
-repeat = 1
-
-*.node[*].appl_type = "SimplePlatooningApp"
-
-#use the braking scenario
-*.node[*].scenario_type = "AccelerateAndBrakeScenario"
-
-#make the leader decelerate with a certain deceleration
-#*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.brakingDeceleration = 8 mpsps
-*.node[*].scenario.startBraking = 15 s
-*.node[*].scenario.startAccelerating = 5 s
-
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.sca
