--- a/examples/platoon_merging/omnetpp.ini
+++ b/examples/platoon_merging/omnetpp.ini
@@ -101,13 +101,14 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 8}
-**.numberOfCarsPerPlatoon = ${platoonSize = 8}
-**.numberOfLanes = ${nLanes = 1}
+**.numberOfCars = ${nCars = 9}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
+**.numberOfLanes = ${nLanes = 2}
 
 ##########################################################
 #                    Position helper                     #
 ##########################################################
+
 *.node[*].helper_type = "PositionHelper"
 *.node[*].helper.nLanes = ${nLanes}
 *.node[*].helper.platoonSize = ${platoonSize}
@@ -154,7 +155,7 @@ seed-set = ${repetition}
 ##########################################################
 #                Communication protocols                 #
 ##########################################################
-*.node[*].protocol_type = "SimplePlatooningBeaconing"
+*.node[*].protocol_type = "PlatoonMergingProtocol"
 #enable statistics recording for the network layer
 *.node[*].prot.*.scalar-recording = true
 *.node[*].prot.*.vector-recording = true
@@ -172,7 +173,7 @@ seed-set = ${repetition}
 ##########################################################
 #                    Traffic manager                     #
 ##########################################################
-**.traffic_type = "PlatoonsTrafficManager"
+**.traffic_type = "PlatoonsAdvancedTrafficManager"
 #insert platooning vehicles at time
 **.traffic.platoonInsertTime = 1 s
 #insert platooning vehicles with a speed of
@@ -190,72 +191,23 @@ seed-set = ${repetition}
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, ${ploegH}, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
-
 #disable statistics recording for all other modules
 **.scalar-recording = false
 **.vector-recording = false
 
-[Config Sinusoidal]
+[Config PlatoonMerging]
+*.node[*].appl_type = "PlatoonMergingApp"
 
 repeat = 1
 
-*.node[*].appl_type = "SimplePlatooningApp"
+*.node[*].scenario_type = "PlatoonMergingScenario"
 
-#use the sinusoidal scenario
-*.node[*].scenario_type = "SinusoidalScenario"
-
-#make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
-*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.oscillationAmplitude = 10 kmph
-*.node[*].scenario.startOscillating = 5 s
+*.node[*].appl.caccSpacing = ${CACCgap}
+*.node[*].appl.ploegH = ${ploegH}
+*.node[*].appl.gapKp = 2
+*.node[*].appl.safeGap = 20
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
-[Config Braking]
 
-repeat = 1
-
-*.node[*].appl_type = "SimplePlatooningApp"
-
-#use the braking scenario
-*.node[*].scenario_type = "BrakingScenario"
-
-#make the leader decelerate with a certain deceleration
-*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.brakingDeceleration = 8 mpsps
-*.node[*].scenario.startBraking = 5 s
-
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
-
-[Config SinusoidalNoGui]
-extends = Sinusoidal
-*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
-#force the config name in the output file to be the same as for the gui experiment
-output-vector-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetition}.sca
-
-[Config BrakingNoGui]
-extends = Braking
-*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
-#force the config name in the output file to be the same as for the gui experiment
-output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
-
-[Config AccelerateAndBraking]
-repeat = 1
-
-*.node[*].appl_type = "SimplePlatooningApp"
-
-#use the braking scenario
-*.node[*].scenario_type = "AccelerateAndBrakeScenario"
-
-#make the leader decelerate with a certain deceleration
-#*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
-*.node[*].scenario.brakingDeceleration = 8 mpsps
-*.node[*].scenario.startBraking = 15 s
-*.node[*].scenario.startAccelerating = 5 s
-
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
