now logging scalar data to results

--- a/examples/platoon_merging/omnetpp.ini
+++ b/examples/platoon_merging/omnetpp.ini
@@ -192,8 +192,8 @@ seed-set = ${repetition}
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 #disable statistics recording for all other modules
-**.scalar-recording = false
-**.vector-recording = false
+**.scalar-recording = true
+**.vector-recording = true
 
 [Config PlatoonMerging]
 *.node[*].appl_type = "PlatoonMergingApp"
