--- a/examples/offramp/omnetpp.ini
+++ b/examples/offramp/omnetpp.ini
@@ -193,8 +193,8 @@ seed-set = ${repetition}
 
 
 #disable statistics recording for all other modules
-**.scalar-recording = false
-**.vector-recording = false
+**.scalar-recording = true
+**.vector-recording = true
 
 [Config OffRamp]
 *.node[*].appl_type = "PlatoonDisaggregationApp"
