--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -149,7 +149,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 200 s
+*.node[*].appl.simulationDuration = 60 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -192,8 +192,8 @@ seed-set = ${repetition}
 
 
 #disable statistics recording for all other modules
-**.scalar-recording = false
-**.vector-recording = false
+**.scalar-recording = true
+**.vector-recording = true
 
 [Config Sinusoidal]
 
