add name of the controller to the result files

--- a/examples/offramp/omnetpp.ini
+++ b/examples/offramp/omnetpp.ini
@@ -204,5 +204,5 @@ seed-set = ${repetition}
 **.traffic.platoonOffset = 4500 m
 **.traffic.platoonVLength = 4 m
 
-output-vector-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/OffRamp_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/OffRamp_${sController}.vec
+output-scalar-file = ${resultdir}/OffRamp_${sController}.sca
