--- a/examples/platoon_merging/omnetpp.ini
+++ b/examples/platoon_merging/omnetpp.ini
@@ -207,7 +207,7 @@ repeat = 1
 *.node[*].appl.gapKp = 2
 *.node[*].appl.safeGap = 20
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/${configname}_${sController}.vec
+output-scalar-file = ${resultdir}/${configname}_${sController}.sca
 
 
