--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -122,7 +122,7 @@ seed-set = ${repetition}
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.caccSpacing = ${CACCgap=10}m
+*.node[*].scenario.caccSpacing = ${CACCgap=20}m
 *.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
@@ -133,7 +133,7 @@ seed-set = ${repetition}
 *.node[*].scenario.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "CONSENSUS" ! controller}
 
 #headway for ACCs
-**.headway = ${headway = 0.3, 1.2, 0.1, 0.1, 0.1 ! controller}s
+**.headway = ${headway = 1, 0.1, 0.1, 0.1, 0.1 ! controller}s
 *.node[*].scenario.accHeadway = ${headway}s
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
@@ -149,7 +149,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 20 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -186,9 +186,11 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "vtypeauto"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, ${CACCgap}, 2, 15 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, ${ploegH}, 0.8 ! controller}s
+**.traffic.platoonInsertDistance = ${0, 2, ${CACCgap}, 2, 15 ! controller}m
+**.traffic.platoonInsertHeadway = ${1, 1.2, 0, ${ploegH}, 0.8 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
+
+**.traffic.platoonVLength = 10 m
 
 
 #disable statistics recording for all other modules
@@ -209,8 +211,8 @@ repeat = 1
 *.node[*].scenario.oscillationAmplitude = 10 kmph
 *.node[*].scenario.startOscillating = 5 s
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/$bla.vec
+output-scalar-file = ${resultdir}/$bla.sca
 
 [Config Braking]
 
