--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -68,8 +68,8 @@ sim-time-limit = 1e6 s
 *.**.nic.phy80211p.maxTXPower = 100mW
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -95dBm
-*.**.nic.phy80211p.decider = xmldoc("config.xml")
-*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic.phy80211p.decider = xmldoc("config_PathLoss.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config_PathLoss.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
 
 ##########################################################
