Disagregation GapSize added

--- a/examples/human/omnetpp.ini
+++ b/examples/human/omnetpp.ini
@@ -214,8 +214,8 @@ seed-set = ${repetition}
 
 
 #disable statistics recording for all other modules
-**.scalar-recording = false
-**.vector-recording = false
+**.scalar-recording = true
+**.vector-recording = true
 
 [Config Sinusoidal]
 
