--- a/examples/offramp/omnetpp.ini
+++ b/examples/offramp/omnetpp.ini
@@ -123,7 +123,7 @@ seed-set = ${repetition}
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.caccSpacing = ${CACCgap=20}m
+*.node[*].scenario.caccSpacing = ${CACCgap=6}m
 *.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
@@ -150,7 +150,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 120 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -201,7 +201,13 @@ seed-set = ${repetition}
 
 *.node[*].scenario_type = "SinusoidalScenario"
 
-**.traffic.platoonOffset = 4500 m
+*.node[*].scenario.leaderOscillationFrequency = 0 Hz
+*.node[*].scenario.oscillationAmplitude = 10 kmph
+*.node[*].scenario.startOscillating = 5 s
+
+*.node[*].appl.GapSize = 30
+
+**.traffic.platoonOffset = 4000 m
 **.traffic.platoonVLength = 4 m
 
 output-vector-file = ${resultdir}/OffRamp_${sController}.vec
