added HH_GCDC controller

--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -104,7 +104,8 @@ seed-set = ${repetition}
 **.numberOfCars = ${nCars = 4}
 **.numberOfCarsPerPlatoon = ${platoonSize = 4}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 1}
+**.numberOfManualCars = ${nCarsManual = 0}
+
 
 ##########################################################
 #                    Position helper                     #
@@ -130,13 +131,22 @@ seed-set = ${repetition}
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
 
+*.node[*].scenario.gcdcKP1 = 0.872
+*.node[*].scenario.gcdcKP2 = 0.29497
+*.node[*].scenario.gcdcKI2 = 0
+*.node[*].scenario.gcdcKP3 = 0.4981
+*.node[*].scenario.gcdcAlpha = 0.3
+*.node[*].scenario.gcdcBeta = 30
+*.node[*].scenario.gcdcDesiredGap = 20
+
+
 
 #controllers to be tested
-**.numericController = ${controller = 0, 0, 1, 2, 3}
-*.node[*].scenario.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "CONSENSUS" ! controller}
+**.numericController = ${controller = 0, 0, 1, 2, 3, 4}
+*.node[*].scenario.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "CONSENSUS", "HH_GCDC" ! controller}
 
 #headway for ACCs
-**.headway = ${headway = 0.3, 1.2, 0.1, 0.1, 0.1 ! controller}s
+**.headway = ${headway = 0.3, 1.2, 0.1, 0.1, 0.1, 0.1 ! controller}s
 *.node[*].scenario.accHeadway = ${headway}s
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
@@ -153,14 +163,14 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 200 s
+*.node[*].appl.simulationDuration = 60 s
 
 ##########################################################
 #                Communication protocols                 #
 ##########################################################
 
-#*.node[*].protocol_type = "SimplePlatooningBeaconing"
-*.node[*].protocol_type = "PlatoonMergingProtocol"
+*.node[*].protocol_type = "SimplePlatooningBeaconing"
+#*.node[*].protocol_type = "PlatoonMergingProtocol"
 
 #enable statistics recording for the network layer
 *.node[*].prot.*.scalar-recording = true
@@ -194,8 +204,8 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, 10, 2, 15 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8 ! controller}s
+**.traffic.platoonInsertDistance = ${2, 2, 20, 2, 15, 30 ! controller}m
+**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8, 0 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
@@ -205,11 +215,11 @@ seed-set = ${repetition}
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = false
-*.manager.IPDS = "194.47.15.19"
+*.manager.IPDS = "194.47.15.55"
 
 #disable statistics recording for all other modules
-**.scalar-recording = false
-**.vector-recording = false
+**.scalar-recording = true
+**.vector-recording = true
 
 ##########################################################
 
@@ -257,7 +267,7 @@ repeat = 1
 *.node[*].appl.caccSpacing = ${CACCgap}
 *.node[*].appl.ploegH = ${ploegH}
 *.node[*].appl.gapKp = 2
-*.node[*].appl.safeGap = 20
+*.node[*].appl.safeGap = 15
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
@@ -270,7 +280,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.55"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
