added standstill obstacle scenario

--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -101,8 +101,8 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 4}
-**.numberOfCarsPerPlatoon = ${platoonSize = 4}
+**.numberOfCars = ${nCars = 2}
+**.numberOfCarsPerPlatoon = ${platoonSize = 2}
 **.numberOfLanes = ${nLanes = 1}
 **.numberOfManualCars = ${nCarsManual = 0}
 
@@ -124,7 +124,7 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=20}
+*.node[*].scenario.caccSpacing = ${CACCgap=14.5}
 *.node[*].scenario.engineTau = 0.5 s
 *.node[*].scenario.ploegH = ${ploegH = 0.5}s
 *.node[*].scenario.ploegKp = 0.2
@@ -151,7 +151,7 @@ seed-set = ${repetition}
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
 #average leader speed
-*.node[*].scenario.leaderSpeed = ${leaderSpeed = 100}kmph
+*.node[*].scenario.leaderSpeed = ${leaderSpeed = 0}kmph
 
 ##########################################################
 #                      Application                       #
@@ -163,7 +163,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 80 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -204,7 +204,7 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, 20, 2, 15, 30 ! controller}m
+**.traffic.platoonInsertDistance = ${2, 2, 3, 3, 15, 30 ! controller}m
 **.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8, 0 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
@@ -215,7 +215,7 @@ seed-set = ${repetition}
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = false
-*.manager.IPDS = "194.47.15.55"
+*.manager.IPDS = "194.47.15.19"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -253,6 +253,7 @@ repeat = 1
 *.node[*].scenario.brakingDeceleration = 8 mpsps
 *.node[*].scenario.startBraking = 5 s
 
+
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
 
@@ -280,10 +281,29 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.55"
+*.node[*].appl.IP_DS = "194.47.15.19"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+##########################################################
+[Config StandstillObstacle]
+
+*.node[*].appl_type = "SimplePlatooningApp"
+
+repeat = 1
+
+#use the braking scenario
+*.node[*].scenario_type = "StandstillObstacleScenario"
+
+#make the leader decelerate with a certain deceleration
+*.node[*].scenario.startAccelerating = 1.1 s
+*.node[*].scenario.acceleration = 1 mpsps
+*.node[*].scenario.startBraking = 30 s
+*.node[*].scenario.notification_d = ${dist = 150}
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${dist}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${dist}.sca
 
 ##########################################################
 [Config SinusoidalNoGui]
