--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -218,8 +218,8 @@ seed-set = ${repetition}
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = false
-*.manager.IPDS = "194.47.15.19"
+*.manager.useDrivingSimulator = true
+*.manager.IPDS = "194.47.15.48"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -285,7 +285,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.48"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
