--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -104,7 +104,7 @@ seed-set = ${repetition}
 **.numberOfCars = ${nCars = 3}
 **.numberOfCarsPerPlatoon = ${platoonSize = 3}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 0}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 ##########################################################
 #                    Position helper                     #
@@ -189,8 +189,8 @@ seed-set = ${repetition}
 #                    Traffic manager                     #
 ##########################################################
 
-**.traffic_type = "PlatoonsTrafficManager"
-#**.traffic_type = "PlatoonsAdvancedTrafficManager"
+#**.traffic_type = "PlatoonsTrafficManager"
+**.traffic_type = "PlatoonsAdvancedTrafficManager"
 #insert platooning vehicles at time
 **.traffic.platoonInsertTime = 1 s
 #insert platooning vehicles with a speed of
@@ -215,7 +215,7 @@ seed-set = ${repetition}
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "194.47.15.19"
+*.manager.IPDS = "194.47.15.48"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -281,7 +281,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.48"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
