--- a/examples/overtaking/omnetpp.ini
+++ b/examples/overtaking/omnetpp.ini
@@ -215,7 +215,7 @@ seed-set = ${repetition}
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = true
+*.manager.useDrivingSimulator = false
 *.manager.IPDS = "194.47.15.48"
 
 #disable statistics recording for all other modules
