--- a/examples/intersection/omnetpp.ini
+++ b/examples/intersection/omnetpp.ini
@@ -101,10 +101,10 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 3}
-**.numberOfCarsPerPlatoon = ${platoonSize = 3}
+**.numberOfCars = ${nCars = 1}
+**.numberOfCarsPerPlatoon = ${platoonSize = 1}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 0}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 
 ##########################################################
@@ -151,7 +151,7 @@ seed-set = ${repetition}
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
 #average leader speed
-*.node[*].scenario.leaderSpeed = ${leaderSpeed = 90}kmph
+*.node[*].scenario.leaderSpeed = ${leaderSpeed = 5}kmph
 
 ##########################################################
 #                      Application                       #
@@ -219,8 +219,8 @@ seed-set = ${repetition}
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = false
-*.manager.IPDS = "194.47.15.19"
+*.manager.useDrivingSimulator = true
+*.manager.IPDS = "194.47.15.48"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -286,7 +286,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.48"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
@@ -299,7 +299,7 @@ repeat = 1
 
 *.node[*].scenario_type = "IntersectionScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.48"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
