removed debug crap

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ subprojects/veins_inet/examples/**/results
 subprojects/veins_inet/examples/**/.tkenvrc
 subprojects/veins_inet/examples/**/.cmdenv-log
 subprojects/veins_inet/examples/**/valgrind.out
+/Debug/
